@@ -1,0 +1,3 @@
+---
+default:
+    libs: lib2
