@@ -2,6 +2,7 @@ Revision history for Config::App
 
 {{$NEXT}}
         - Adding Perl versions to test; annual general update for 2018
+        - Extended "libs" keyword to allow for single scalar string
 
 1.05      2017-01-10 04:03:20-08:00 America/Los_Angeles
         - import() accepts multiple library dirs
